# graphrag-lab

./: .env.example  .gitignore  M2_METRIC_PARITY_SUMMARY.md  Makefile  README.md  pyproject.toml
.openclaw/: code-status-log.md
configs/: base.yaml
configs/profiles/: api-llm.yaml  graphragbench-debug.yaml  local-debug.yaml  multi-gpu.yaml
data/graphragbench/: sample.jsonl
data/toy/: dataset.yaml
docs/: METRICS_IMPLEMENTATION.md  RESEARCH_WORKFLOW.md  experiment_matrix_template.md  m1_architecture.md  m2_todo.md  stage2_experiment_plan.md
docs/reports/: daily_summary_2026-03-05.md  heartbeat_exec_2026-03-06_1021.md  status_check_2026-03-06_0945.md
docs/research/: 6h_patrol_2026-03-05.md  6h_patrol_2026-03-06_1315.md  6h_patrol_2026-03-06_1915.md  6h_patrol_2026-03-07_1330.md  6h_patrol_2026-03-07_1930.md  6h_patrol_2026-03-08_0730.md  6h_patrol_2026-03-08_1330.md  hipporag-reading-notes-2026-03-06.md
src/graphrag_lab/: __init__.py  cli.py  community_detector.py  evidence_provenance_graph.py  node_ranker.py  retriever_controller.py
src/graphrag_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_llm_reader.py  test_community_detector_e2e.py  test_distributed_launcher.py  test_evidence_provenance_e2e.py  test_graphragbench_adapter.py  test_graphragbench_pipeline.py  test_node_ranker_e2e.py  test_retriever_controller_e2e.py  test_retriever_trainer.py  test_retriever_training_e2e.py  test_seed_sweep.py  test_toy_pipeline.py  test_unified_memory.py
tests/adapter/: test_metrics_parity.py
(+29 files in other folders)
